src/test/ui/regions/regions-infer-paramd-indirect.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-infer-paramd-indirect.rs:33:9
   |
LL | impl<'a> set_f<'a> for c<'a> {
   |      -- lifetime `'a` defined here
...
LL |     fn set_f_bad(&mut self, b: Box<b>) {
   |                             - has type `std::boxed::Box<std::boxed::Box<&'1 isize>>`
LL |         self.f = b;
   |         ^^^^^^ assignment requires that `'1` must outlive `'a`

error: aborting due to previous error

